wip page action

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -66,6 +66,11 @@
       }
     ]
   },
+  "page_action": {
+    "default_icon": "img/container-site.svg",
+    "default_title": "Always open this in a Container",
+    "default_popup": "pageActionPopup.html"
+  },
   "background": {
     "page": "js/background/index.html"
   },
