--- a/src/manifest.json
+++ b/src/manifest.json
@@ -67,9 +67,11 @@
     ]
   },
   "page_action": {
+    "browser_style": true,
     "default_icon": "img/container-site.svg",
     "default_title": "Always open this in a Container",
-    "default_popup": "pageActionPopup.html"
+    "default_popup": "pageActionPopup.html",
+    "show_matches": ["*://*/*"]
   },
   "background": {
     "page": "js/background/index.html"
